--- a/StaticSite/StaticSite.csproj
+++ b/StaticSite/StaticSite.csproj
@@ -5,8 +5,9 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>8.0</LangVersion>
+    <TransformOnBuild>true</TransformOnBuild>
   </PropertyGroup>
-
+  
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
       <PrivateAssets>all</PrivateAssets>
@@ -16,6 +17,25 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Collections.Immutable" Version="1.7.0" />
     <PackageReference Include="LibGit2Sharp" Version="0.26.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Modules\GeneratedBaseModules.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>GeneratedBaseModules.tt.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Modules\GeneratedBaseModules.tt.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>GeneratedBaseModules.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
