--- a/StaticSite/.editorconfig
+++ b/StaticSite/.editorconfig
@@ -2,3 +2,6 @@
 
 # CA1303: Do not pass literals as localized parameters
 dotnet_diagnostic.CA1303.severity = none
+
+# CA1031: Do not catch general exception types
+dotnet_diagnostic.CA1031.severity = suggestion
