--- a/StaticSite/StaticSite.csproj
+++ b/StaticSite/StaticSite.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Modules\GeneratedBaseModules.tt">
+    <None Update="Stages\GeneratedBaseModules.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>GeneratedBaseModules.tt.cs</LastGenOutput>
     </None>
@@ -31,7 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Modules\GeneratedBaseModules.tt.cs">
+    <Compile Update="Stages\GeneratedBaseModules.tt.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>GeneratedBaseModules.tt</DependentUpon>
