--- a/StaticSite/.editorconfig
+++ b/StaticSite/.editorconfig
@@ -5,3 +5,6 @@ dotnet_diagnostic.CA1303.severity = none
 
 # CA1031: Do not catch general exception types
 dotnet_diagnostic.CA1031.severity = suggestion
+
+# CA1716: Identifiers should not match keywords
+dotnet_diagnostic.CA1716.severity = silent
