Added First Razor pipeline

--- a/Stasistium.Sample/Stasistium.Sample.csproj
+++ b/Stasistium.Sample/Stasistium.Sample.csproj
@@ -1,14 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Stasistium.Core\Stasistium.Core.csproj" />
     <ProjectReference Include="..\Stasistium.Git\Stasistium.Git.csproj" />
     <ProjectReference Include="..\Stasistium.Markdown\Stasistium.Markdown.csproj" />
+    <ProjectReference Include="..\Stasistium.Razor\Stasistium.Razor.csproj" />
     <ProjectReference Include="..\Stasistium.YAML\Stasistium.YAML.csproj" />
   </ItemGroup>
 
