--- a/Stasistium.Markdown/Stasistium.Markdown.csproj
+++ b/Stasistium.Markdown/Stasistium.Markdown.csproj
@@ -7,11 +7,9 @@
     <TransformOnBuild>true</TransformOnBuild>
   </PropertyGroup>
 
+  <Import Project="$(SolutionDir)Common.targets" />
+
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Parsers" Version="6.0.0" />
   </ItemGroup>
 
