--- a/Stasistium.Core/Stasistium.Core.csproj
+++ b/Stasistium.Core/Stasistium.Core.csproj
@@ -8,11 +8,9 @@
     <TransformOnBuild>true</TransformOnBuild>
   </PropertyGroup>
 
+  <Import Project="$(SolutionDir)Common.targets" />
+
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="System.Collections.Immutable" Version="1.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
