--- a/Stasistium.Git/Stasistium.Git.csproj
+++ b/Stasistium.Git/Stasistium.Git.csproj
@@ -4,12 +4,10 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <Import Project="$(SolutionDir)Common.targets" />
+
   <ItemGroup>
     <PackageReference Include="LibGit2Sharp" Version="0.26.1" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
