--- a/.github/workflows/publishDevelop.yml
+++ b/.github/workflows/publishDevelop.yml
@@ -37,7 +37,7 @@ jobs:
         echo '</configuration>' >> nuget.config
     - name: Publish nuget
       run: |
-           for f in ./Stasistium.Core/bin/Release/*.nupkg
+           for f in ./*/bin/Release/*.nupkg
            do
              curl -vX PUT -u "LokiMidgard:${{ secrets.GITHUB_TOKEN }}" -F package=@$f https://nuget.pkg.github.com/LokiMidgard/
            done
