--- a/Stasistium.Sample/Stasistium.Sample.csproj
+++ b/Stasistium.Sample/Stasistium.Sample.csproj
@@ -3,7 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <!--PreserverCompilationContext will be set by Nuget consuming Razor package-->
     <PreserveCompilationContext>true</PreserveCompilationContext>
+    <Nullable>enable</Nullable>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
