--- a/Stasistium.Razor/Stasistium.Razor.csproj
+++ b/Stasistium.Razor/Stasistium.Razor.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.RazorPages" Version="2.2.5" />
     <PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
   </ItemGroup>
@@ -18,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="build/Stasistium.Razor.targets" pack="true" PackagePath="build"   ></None>
+    <None Include="build/Stasistium.Razor.targets" pack="true" PackagePath="build"></None>
   </ItemGroup>
 
 </Project>
