Structs make problems while serelizing.

--- a/Stasistium.Sample/Stasistium.Sample.csproj
+++ b/Stasistium.Sample/Stasistium.Sample.csproj
@@ -18,6 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="config.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Layout\base.cshtml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
