--- a/Stasistium.Sample/config.json
+++ b/Stasistium.Sample/config.json
@@ -2,5 +2,5 @@
   "ContentRepo": "https://github.com/nota-game/nota.git",
   "SchemaRepo": "https://github.com/nota-game/nota-schema.git",
   "Layouts": "layout",
-  "Host": "https://nota-game.azurewebsites.net"
+  "Host": "https://nota-game2.azurewebsites.net"
 }
