--- a/Stasistium.Markdown/Stasistium.Markdown.csproj
+++ b/Stasistium.Markdown/Stasistium.Markdown.csproj
@@ -7,7 +7,7 @@
   <Import Project="$(SolutionDir)Common.targets" />
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Toolkit.Parsers" Version="6.0.0-build.107.g1ca227c20e" />
+    <PackageReference Include="Microsoft.Toolkit.Parsers" Version="6.1.0-build.3.ge90f28e981" />
   </ItemGroup>
 
   <ItemGroup>
