--- a/.github/workflows/publishDevelop.yml
+++ b/.github/workflows/publishDevelop.yml
@@ -21,9 +21,9 @@ jobs:
       run: |
         echo '<?xml version="1.0" encoding="utf-8"?><configuration><packageSources><add key="github" value="https://nuget.pkg.github.com/LokiMidgard/index.json" /></packageSources>  <packageSourceCredentials>    <github>      <add key="Username" value="LokiMidgard" />      <add key="ClearTextPassword" value="${{ secrets.GITHUB_TOKEN }}" />    </github>  </packageSourceCredentials></configuration>' > nuget.config
     - name: Build with dotnet
-      run: dotnet build --configuration Release
+      run: dotnet build --configuration Debug
     - name: Pack
-      run: dotnet pack --configuration Release
+      run: dotnet pack --configuration Debug
     - name: Publish nuget
       run: |
            for f in ./*/bin/Release/*.nupkg
