--- a/Stasistium.Markdown/Stasistium.Markdown.csproj
+++ b/Stasistium.Markdown/Stasistium.Markdown.csproj
@@ -7,7 +7,7 @@
   <Import Project="$(SolutionDir)Common.targets" />
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Toolkit.Parsers" Version="6.1.0-build.31.gcaeca75da5" />
+    <PackageReference Include="Microsoft.Toolkit.Parsers" Version="6.1.0-build.32.gaea7c9f533" />
   </ItemGroup>
 
   <ItemGroup>
