--- a/Stasistium.Markdown/Stasistium.Markdown.csproj
+++ b/Stasistium.Markdown/Stasistium.Markdown.csproj
@@ -7,7 +7,7 @@
   <Import Project="$(SolutionDir)Common.targets" />
 
   <ItemGroup>
-    <PackageReference Include="AdaptMark" Version="0.1.20-g61dc2a6157" />
+    <PackageReference Include="AdaptMark" Version="0.1.21-g0d99984a1f" />
   </ItemGroup>
 
   <ItemGroup>
