--- a/.github/workflows/publishDevelop.yml
+++ b/.github/workflows/publishDevelop.yml
@@ -15,19 +15,10 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '3.1.100'
-    - name: Add Nuget credentials
-      shell: bash
-      run: |
-        echo '<?xml version="1.0" encoding="utf-8"?><configuration><packageSources><add key="github" value="https://nuget.pkg.github.com/LokiMidgard/index.json" /></packageSources>  <packageSourceCredentials>    <github>      <add key="Username" value="LokiMidgard" />      <add key="ClearTextPassword" value="${{ secrets.GITHUB_TOKEN }}" />    </github>  </packageSourceCredentials></configuration>' > nuget.config
+        dotnet-version: '3.1.400'
     - name: Build with dotnet
       run: dotnet build --configuration Debug
     - name: Pack
       run: dotnet pack --configuration Debug
-    - name: Publish nuget
-      run: |
-           for f in ./*/bin/*/*.nupkg
-           do
-             curl -vX PUT -u "LokiMidgard:${{ secrets.GITHUB_TOKEN }}" -F package=@$f https://nuget.pkg.github.com/LokiMidgard/
-           done
-      shell: bash
+    - name: Publish
+      run: dotnet nuget push **/*.nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NugetApiKey }}
