--- a/nuget.config
+++ b/nuget.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <packageSources>
+  <!--<packageSources>
     <add key="githubLokiMidgard" value="https://nuget.pkg.github.com/LokiMidgard/index.json" />
-  </packageSources>
+  </packageSources>-->
 </configuration>
