--- a/Common.targets
+++ b/Common.targets
@@ -4,6 +4,7 @@
 	<PropertyGroup>
 		<Nullable>enable</Nullable>
 		<LangVersion>8.0</LangVersion>
+		<ContinuosIntegrationBuild>true</ContinuosIntegrationBuild>
 	</PropertyGroup>
 
 	<!--Source Link Support-->
