--- a/.github/workflows/publishDevelop.yml
+++ b/.github/workflows/publishDevelop.yml
@@ -16,6 +16,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.1.402'
+    - name: Install dependencies
+      run: dotnet restore
     - name: Build with dotnet
       run: dotnet build --configuration Debug
     - name: Pack
