--- a/Stasistium.Markdown/Stasistium.Markdown.csproj
+++ b/Stasistium.Markdown/Stasistium.Markdown.csproj
@@ -1,17 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+	</PropertyGroup>
 
-  <Import Project="$(SolutionDir)Common.targets" />
+	<Import Project="$(SolutionDir)Common.targets" />
 
-  <ItemGroup>
-    <PackageReference Include="AdaptMark" Version="0.1.32-ge11e930b5d" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="AdaptMark" Version="0.1.32-ge11e930b5d" />
+		<PackageReference Include="GitVersionTask" Version="5.3.7">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Stasistium.Core\Stasistium.Core.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Stasistium.Core\Stasistium.Core.csproj" />
+	</ItemGroup>
 
 </Project>
