--- a/Stasistium.Markdown/Stasistium.Markdown.csproj
+++ b/Stasistium.Markdown/Stasistium.Markdown.csproj
@@ -7,7 +7,7 @@
 	<Import Project="$(SolutionDir)Common.targets" />
 
 	<ItemGroup>
-		<PackageReference Include="AdaptMark" Version="0.1.32-ge11e930b5d" />
+		<PackageReference Include="AdaptMark" Version="0.1.34-g5658af5a89" />
 		<PackageReference Include="GitVersionTask" Version="5.3.7">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
