--- a/Stasistium.Core/Stasistium.Core.csproj
+++ b/Stasistium.Core/Stasistium.Core.csproj
@@ -3,7 +3,6 @@
 	<PropertyGroup>
 		<RootNamespace>Stasistium</RootNamespace>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
-		<TransformOnBuild>true</TransformOnBuild>
 	</PropertyGroup>
 
 
@@ -16,5 +15,9 @@
 		</PackageReference>
 		<PackageReference Include="System.Collections.Immutable" Version="1.7.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Stasistium.Generator\Stasistium.Generator.csproj"  OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 </Project>
