--- a/Stasistium.Git/Stasistium.Git.csproj
+++ b/Stasistium.Git/Stasistium.Git.csproj
@@ -18,5 +18,8 @@
 		<ProjectReference Include="..\Stasistium.Core\Stasistium.Core.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\Stasistium.Generator\Stasistium.Generator.csproj"  OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+	</ItemGroup>
 
 </Project>
