--- a/Stasistium.Office/Stasistium.Office.csproj
+++ b/Stasistium.Office/Stasistium.Office.csproj
@@ -18,4 +18,9 @@
 		<ProjectReference Include="..\Stasistium.Core\Stasistium.Core.csproj" />
 	</ItemGroup>
 
+
+	<ItemGroup>
+		<ProjectReference Include="..\Stasistium.Generator\Stasistium.Generator.csproj"  OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+	</ItemGroup>
+
 </Project>
