--- a/Stasistium.Sass/Stasistium.Sass.csproj
+++ b/Stasistium.Sass/Stasistium.Sass.csproj
@@ -19,4 +19,11 @@
 		</PackageReference>
 	</ItemGroup>
 
+
+
+
+	<ItemGroup>
+		<ProjectReference Include="..\Stasistium.Generator\Stasistium.Generator.csproj"  OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+	</ItemGroup>
+	
 </Project>
