--- a/Stasistium.YAML/Stasistium.YAML.csproj
+++ b/Stasistium.YAML/Stasistium.YAML.csproj
@@ -18,4 +18,8 @@
 		</PackageReference>
 	</ItemGroup>
 
+
+	<ItemGroup>
+		<ProjectReference Include="..\Stasistium.Generator\Stasistium.Generator.csproj"  OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+	</ItemGroup>
 </Project>
