--- a/.github/workflows/publishDevelop.yml
+++ b/.github/workflows/publishDevelop.yml
@@ -15,11 +15,11 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '3.1.406'
+        dotnet-version: '5.0.103'
     - name: Install dependencies
       run: dotnet restore
     - name: Build with dotnet
-      run: dotnet build --configuration Debug
+      run: dotnet build --configuration Debug --no-restore
     - name: Pack
       run: dotnet pack --configuration Debug
     - name: Publish
