Fix Version of generator

--- a/Stasistium.Generator/Stasistium.Generator.csproj
+++ b/Stasistium.Generator/Stasistium.Generator.csproj
@@ -6,6 +6,12 @@
 	<Import Project="$(SolutionDir)Common.targets" />
 
 	<ItemGroup>
+				<PackageReference Include="GitVersionTask" Version="5.3.7">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+
+		
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.2" PrivateAssets="all" />
 	</ItemGroup>
