--- a/Stasistium.Generator/Stasistium.Generator.csproj
+++ b/Stasistium.Generator/Stasistium.Generator.csproj
@@ -6,11 +6,17 @@
 
 	<Import Project="$(SolutionDir)Common.targets" />
 
+	<!--Reset Symbols for this build-->
 	<PropertyGroup>
-		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+		<IncludeSymbols>false</IncludeSymbols>
+	</PropertyGroup>
+
+	<PropertyGroup>
 		<SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
 		<IncludeBuildOutput>false</IncludeBuildOutput>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+
+
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -23,16 +29,21 @@
 		<DevelopmentDependency>true</DevelopmentDependency>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <Compile Remove="bin\**" />
+	  <EmbeddedResource Remove="bin\**" />
+	  <None Remove="bin\**" />
+	</ItemGroup>
+
 
 	<ItemGroup>
-
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.2" PrivateAssets="all" />
 	</ItemGroup>
 
+
 	<ItemGroup>
 		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
-		<None Update="tools\*" Pack="true" PackagePath="" />
 	</ItemGroup>
 
 </Project>
